--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           <script language="JavaScript">
                 var motSecret;
 
-                var tableauMot=new Array();    // Le tableau qui contient les lettres du mot à trouver
+                var tableauLettres=new Array();    // Le tableau qui contient les lettres du mot à trouver
                 var mots=new Array();        // Le tableau qui contient tous les mots possibles
 
                 var tailleMot;                // Le nombre de lettres du mot à trouver
@@ -55,8 +55,8 @@
                     for(var i=0; i<tailleMot; i++) {
 
                         // Si c'est le cas :
-                        if(tableauMot[i].innerHTML==lettre) {
-                            tableauMot[i].style.visibility='visible';    // On affiche la lettre
+                        if(tableauLettres[i].innerHTML==lettre) {
+                            tableauLettres[i].style.visibility='visible';    // On affiche la lettre
                             trouve=true;
                             lettresTrouvees++;
                         }
@@ -71,7 +71,7 @@
                         // Si on a raté 9 fois :
                         if(coupsManques==11){
                             alert("Vous avez perdu !");
-                            for(var i=0; i<tailleMot; i++) tableauMot[i].style.visibility='visible';
+                            for(var i=0; i<tailleMot; i++) tableauLettres[i].style.visibility='visible';
                             fini=true;
                             // on affiche le mot, on fini le jeu
                         }
@@ -81,76 +81,75 @@
                         fini=true;
                     }
                 }
-            -->
         </script>
     </head>
 
 
 
-<body>
+     <body>
 
-<center>
-<div id="page">
+          <center>
+          <div id="page">
 
-    <h1>Jeu de pendu</h1>
+              <h1>Jeu de pendu</h1>
 
-    <p>Entrez une lettre grâce au clavier ci-dessous. Si elle est dans le mot secret, elle sera affichée mais sinon... la sentence se rapprochera !</p>
+              <p>Entrez une lettre grâce au clavier ci-dessous. Si elle est dans le mot secret, elle sera affichée mais sinon... la sentence se rapprochera !</p>
 
-    <table id="clavier">
-     <tr>
-      <td onclick="proposer(this);" >A</td>
-      <td onclick="proposer(this);" >B</td>
-      <td onclick="proposer(this);" >C</td>
-      <td onclick="proposer(this);" >D</td>
-      <td onclick="proposer(this);" >E</td>
-      <td onclick="proposer(this);" >F</td>
-      <td onclick="proposer(this);" >G</td>
-      <td onclick="proposer(this);" >H</td>
-      <td onclick="proposer(this);" >I</td>
-      <td onclick="proposer(this);" >J</td>
-     </tr>
-     <tr>
-      <td onclick="proposer(this);" >K</td>
-      <td onclick="proposer(this);" >L</td>
-      <td onclick="proposer(this);" >M</td>
-      <td onclick="proposer(this);" >N</td>
-      <td onclick="proposer(this);" >O</td>
-      <td onclick="proposer(this);" >P</td>
-      <td onclick="proposer(this);" >Q</td>
-      <td onclick="proposer(this);" >R</td>
-      <td onclick="proposer(this);" >S</td>
-      <td onclick="proposer(this);" >T</td>
-     </tr>
-     <tr>
-      <td onclick="proposer(this);" >U</td>
-      <td onclick="proposer(this);" >V</td>
-      <td onclick="proposer(this);" >W</td>
-      <td onclick="proposer(this);" >X</td>
-      <td onclick="proposer(this);" >Y</td>
-      <td onclick="proposer(this);" >Z</td>
-     </tr>
-    </table>
-    <br>
-    <a class="lien" href="javascript:location.reload();">Nouvelle partie</a>
-
-
-     <img name="pendu" id="pendu" src="img/pendu_0.png"/>
+              <table id="clavier">
+               <tr>
+                <td onclick="proposer(this);" >A</td>
+                <td onclick="proposer(this);" >B</td>
+                <td onclick="proposer(this);" >C</td>
+                <td onclick="proposer(this);" >D</td>
+                <td onclick="proposer(this);" >E</td>
+                <td onclick="proposer(this);" >F</td>
+                <td onclick="proposer(this);" >G</td>
+                <td onclick="proposer(this);" >H</td>
+                <td onclick="proposer(this);" >I</td>
+                <td onclick="proposer(this);" >J</td>
+               </tr>
+               <tr>
+                <td onclick="proposer(this);" >K</td>
+                <td onclick="proposer(this);" >L</td>
+                <td onclick="proposer(this);" >M</td>
+                <td onclick="proposer(this);" >N</td>
+                <td onclick="proposer(this);" >O</td>
+                <td onclick="proposer(this);" >P</td>
+                <td onclick="proposer(this);" >Q</td>
+                <td onclick="proposer(this);" >R</td>
+                <td onclick="proposer(this);" >S</td>
+                <td onclick="proposer(this);" >T</td>
+               </tr>
+               <tr>
+                <td onclick="proposer(this);" >U</td>
+                <td onclick="proposer(this);" >V</td>
+                <td onclick="proposer(this);" >W</td>
+                <td onclick="proposer(this);" >X</td>
+                <td onclick="proposer(this);" >Y</td>
+                <td onclick="proposer(this);" >Z</td>
+               </tr>
+              </table>
+              <br>
+              <a class="lien" href="javascript:location.reload();">Nouvelle partie</a>
 
 
-    <table id="mot">
-        <tr>
-            <script language="javascript">
-                for(var i=0; i<tailleMot; i++) document.write("<td> <p id=\""+i+"\">"+motSecret.charAt(i)+"</p></td>");
-            </script>
-        </tr>
-    </table>
+               <img name="pendu" id="pendu" src="img/pendu_0.png"/>
 
 
-    <script language="javascript">
-        for(var i=0; i<tailleMot; i++) tableauMot[i]=document.getElementById(i);
-    </script>
+              <table id="mot">
+                  <tr>
+                      <script language="javascript">
+                          for(var i=0; i<tailleMot; i++) document.write("<td> <p id=\""+i+"\">"+motSecret.charAt(i)+"</p></td>");
+                      </script>
+                  </tr>
+              </table>
 
-<center>
-</div>
-</body>
+
+              <script language="javascript">
+                  for(var i=0; i<tailleMot; i++) tableauLettres[i]=document.getElementById(i);
+              </script>
+
+          <center>
+     </div>
+     </body>
 </html>
